@@ -9,3 +9,7 @@ and Ken Turkowski, by way of Arun Chandra.
 Key parts of the development of Loris were initiated during an invited
 residency by Kelly Fitz at the Bregman Electronic Music Studio at
 Dartmouth College in 1996, graciously arranged by Larry Polansky.
+
+Thanks to Michael Gogins for .NET testing.
+
+Ulrike Axen provided an optimal collating algorithm, used in the Distiller.
