@@ -800,9 +800,16 @@ href="#Channelizer">Channelizer</a>), and, therefore, having a common
 label, are distilled into a single Partial, leaving at most a single
 Partial per frequency channel and label. Channels that contain no
 Partials are not represented in the distilled data. Partials that are
-not labeled, that is, Partials having label 0, are unaffected by the
-distillation process. All unlabeled Partials remain unlabeled and
-unmodified in the distilled partial set.
+not labeled, that is, Partials having label 0, are 
+"collated " into groups of non-overlapping 
+(in time) Partials, assigned an unused label (greater than 
+the label associated with any frequency channel), and
+fused into a single Partial per group.
+"Collating" is a bit like "sifting" but non-overlapping Partials 
+are grouped without regard to frequency proximity.
+This algorithm produces the smallest-possible number of 
+collated Partials. Thanks to Ulrike Axen for providing
+this optimal algorithm.
 <p>
 Distillation modifies the Partial container (a PartialList). All 
 Partials in the distilled range having a common label are replaced
@@ -829,28 +836,17 @@ Destroy this Distiller.
 	
 <h4>Distillation</h4>
 
-<p><tt><b> distill( PartialList & container, PartialList::iterator dist_begin, 
-PartialList::iterator dist_end )
-</b></tt>
-<blockquote>[ returns void  ]
-<br>
-Distill Partial on the specified half-open (STL-style) range in the
-specified container (PartialList). 
-</blockquote>	
-
 <p><tt><b> distill( PartialList & container )</b></tt>
 <blockquote>[ returns void  ]
 <br>
 Distill all Partials in the specified container (PartialList).
 </blockquote>
 
-<p><tt><b> operator() ( PartialList & container, PartialList::iterator dist_begin, 
-PartialList::iterator dist_end )
+<p><tt><b> operator() ( PartialList & container )
 </b></tt>
 <blockquote>[ returns void  ]
 <br>
-Function call operator: same as distill( PartialList & container, PartialList::iterator dist_begin, 
-PartialList::iterator dist_end ). 
+Function call operator: same as distill( PartialList & container ). 
 </blockquote>
 	
 <p><a href="#contents"><small>Contents</small></a>	
